--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,14 @@ name = "dagskra"
 version = "0.2.0"
 
 [dependencies]
-askama = { version = "0.12", features = ["with-axum"] }
-askama_axum = "0.3"
-axum = "0.6"
-chrono = "0.4"
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["full"] }
+askama = { version = "*", features = ["with-axum"] }
+askama_axum = "*"
+axum = "*"
+chrono = "*"
+reqwest = { version = "*", features = ["json"] }
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+shuttle-axum = "*"
+shuttle-runtime = "*"
+tokio = { version = "*", features = ["full"] }
+tracing = "*"
