--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,15 @@ name = "dagskra"
 version = "0.2.0"
 
 [dependencies]
-askama = { version = "*", features = ["with-axum"] }
-askama_axum = "*"
-axum = "*"
-chrono = "*"
-reqwest = { version = "*", features = ["json"] }
-serde = { version = "*", features = ["derive"] }
-serde_json = "*"
-shuttle-axum = "*"
-shuttle-runtime = "*"
-tokio = { version = "*", features = ["full"] }
-tracing = "*"
+askama = { version = "0.12.0", features = ["with-axum"] }
+askama_axum = "0.3.0"
+axum = "0.6.18"
+chrono = "0.4.26"
+reqwest = { version = "0.11.18", features = ["json"] }
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.97"
+shuttle-axum = "0.18.0"
+shuttle-runtime = "0.18.0"
+time = { version = "0.3.22", features = ["serde-human-readable"] }
+tokio = { version = "1.8.2", features = ["full"] }
+tracing = "0.1.37"
