--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,17 @@
 description = "Sjónvarpsdagskrá RÚV"
 edition = "2021"
 name = "dagskra"
-version = "0.2.0"
+version = "0.3.1"
 
 [dependencies]
-askama = { version = "0.12.0", features = ["with-axum"] }
-askama_axum = "0.3.0"
-axum = "0.6.19"
-chrono = "0.4.26"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
+axum = "0.7.2"
+chrono = "0.4.31"
 reqwest = { version = "0.11.18", features = ["json"] }
-serde = { version = "1.0.175", features = ["derive"] }
-serde_json = "1.0.97"
-shuttle-axum = "0.21.0"
-shuttle-runtime = "0.21.0"
-tokio = { version = "1.29.1", features = ["full"] }
-tracing = "0.1.37"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+shuttle-axum = { version = "0.34.1", default-features = false, features = ["axum-0-7"]}
+shuttle-runtime = "0.34.1"
+tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
