--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,18 @@
 description = "Sjónvarpsdagskrá RÚV"
 edition = "2021"
 name = "dagskra"
-version = "0.3.1"
+version = "0.4.0"
 
 [dependencies]
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
-axum = "0.7.2"
-chrono = "0.4.31"
-reqwest = { version = "0.11.18", features = ["json"] }
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
-tokio = { version = "1.34.0", features = ["full"] }
+axum = "0.7.3"
+chrono = { version = "0.4.31", features = ["serde"] }
+reqwest = { version = "0.11.23", features = ["json"] }
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
+shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
+shuttle-runtime = "0.35.2"
+time = { version = "0.3.31", features = ["serde-human-readable"] }
+tokio = { version = "1.35.1", features = ["full"] }
+tracing = "0.1.40"
