--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ chrono = { version = "0.4.31", features = ["serde"] }
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
-shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
-shuttle-runtime = "0.35.2"
+shuttle-axum = "0.36.0"
+shuttle-runtime = "0.36.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tracing = "0.1.40"
