--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ version = "0.4.0"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = "0.7.4"
-chrono = { version = "0.4.31", features = ["serde"] }
+axum-htmx = { version = "0.5.0", features = ["guards"] }
+chrono = { version = "0.4.33", features = ["serde"] }
 reqwest = { version = "0.11.23", features = ["json"] }
-serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.111"
-shuttle-axum = "0.36.0"
-shuttle-runtime = "0.36.0"
-tokio = { version = "1.35.1", features = ["full"] }
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
+shuttle-axum = "0.37.0"
+shuttle-runtime = "0.37.0"
+tokio = { version = "1.36.0", features = ["full"] }
 tracing = "0.1.40"
